    [*] Fixed ObserverWidget not keeping its expanded nodes when refreshing while using the ObserverHints::RootIndexHide hint.
	[*] Fixed crash in ActionManager::unregisterCommandsForContext() when there was not command registered in the action manager.
	[*] Fixed memory leak in WidgetLoggerEngineFrontend.
	[*] Fixed memory leak in SearchBoxWidget.

    ============================
    QtilitiesExtensionSystem:
    ============================
    [*] Fixing issues in the extension system when no default plugin configuration is available.

    ============================
    QtilitiesProjectManagement:
    ============================

    ============================
    QtilitiesTesting:
    ============================

    ============================
    Plugins:
    ============================
    [*] Cleaned up memory leak in HelpPlugin.

    ============================
    Examples:
    ============================
    [+] Added a new example which shows how to use, and explain the purpose of the different property classes in Qtilities.


================================
Qtilities v1.4 Changes
================================
    To see all closed issues in the issue tracker linked to this milestone, see the following page:
    https://github.com/JPNaude/Qtilities/issues/milestones

    General:
    ============================
    [+] Qtilities is now also available under LGPL v2.1.
    [+] Added a new wiki for the Qtilities project at https://github.com/JPNaude/Qtilities/wiki.

    [#] The Qtilities website moved from http://www.qtilities.org to http://jpnaude.github.io/Qtilities/.

    [-] support@qtilities.org is no longer available, please use the mailing list for support from here on.
    [-] The Qtilities blog is no longer available.

    [*] Fixed some issues which caused compilation on Mac to fail.
    [*] Fixed compilation issue with Qt5. See http://github.com/JPNaude/Qtilities/issues/92 for more details.

    ============================